création de la boutique

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 .fond{
 	background-attachment:fixed;
-	background-image: url("/nostromo/img/1.jpg");
+	background-image: url("http://puu.sh/l7R7a/c38cc933a5.jpg");
 	background-size:cover;
 }
 .Titre{
