Mise à jour des fichiers du commit

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 
-.fond{
+.background{
 	background-attachment:fixed;
 	background-image: url("http://puu.sh/l7R7a/c38cc933a5.jpg");
-	background-size:cover;
+	background-size: cover;
 }
 .Titre{
 	vertical-align: middle;
-	text-align: middle;
+	text-align: center;
 }
